--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <div class="right">
                     <label for="">Conocimientos: </label>
                     <div>
-                        <ul>
-                            <li>Diseñador Web</li>
+                        <ul class="colortext">
+                            <li >Diseñador Web</li>
                             <li>Programador</li>
                             <li>Diseñador grafico</li>
                         </ul>
